LangX.g4
grammar LangX;

prog: ( stat? NEWLINE )* ;

stat:	WRITE ID		#write
	| ID ASSIGN expr	#assign
	| READ ID   		#read;

expr: NEG expr       #neg
   | LP expr RP      #parens
   | expr MUL expr   #mul   
   | expr DIV expr   #div
   | expr ADD expr   #add
   | expr SUB expr   #sub
   | expr AND expr   #and
   | expr XOR expr   #xor
   | expr OR expr    #or
   | value           #single;

value: ID
   | INT
   | REAL
   | FLOAT
   | TRUE
   | FALSE
   | STRING;

WRITE:	'write' ;
READ:	'read' ;

TRUE:  'true' ;
FALSE: 'false' ;

AND:   'and' ;
OR:    'or' ;
XOR:   'xor' ;
NEG:   'not' ;
ID:   ('a'..'z'|'A'..'Z')+;

FLOAT: '0'..'9'+ '.' '0'..'9'+ 'f';
REAL: '0'..'9'+ '.' '0'..'9'+;
INT:   '0'..'9'+;
STRING: '\'' ~'\''* '\'';

ASSIGN: '=' ;
ADD: '+';
SUB: '-' ;
MUL: '*' ;
DIV: '/' ;
LP : '(' ;
RP : ')' ;

NEWLINE:	'\r'? '\n';

WS:   (' '|'\t')+ { skip(); };
